Refactoring old code

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,17 @@
 cmake_minimum_required(VERSION 3.8)
 project(robot-simulation)
 
-set(MY_SOURCES main.cpp point.cpp)
+set(MY_SOURCES
+    main.cpp
+    point.cpp
+    point2_shape.cpp
+)
 
-set(MY_HEADERS main.h point.h)
+set(MY_HEADERS
+    main.hpp
+    point.hpp
+    point2_shape.hpp
+)
 
 add_executable(robot-simulation ${MY_SOURCES} ${MY_HEADERS})
 
