Refactored, fix ready

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,17 +4,17 @@ project("robot-simulation")
 set(MY_SOURCES
     "main.cpp"
     "point.cpp"
-    # "point2_shape.cpp"
-    # "rnd.cpp"
+    "point2_shape.cpp"
+    "rnd.cpp"
 	"line.cpp"
 )
 
 set(MY_HEADERS
     "main.h"
     "point.h"
-    # "point2_shape.h"
-    # "rnd.h"
-	# "triangulation2.h"
+    "point2_shape.h"
+    "rnd.h"
+	"triangulation.h"
 	"line.h"
 )
 
